<package>
  <name>roch_project</name>
  <version>1.0.6</version>
  <description>roch Project</description>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <author email="wzhang@softrobtech.com">Maintained by Carl </author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roch</run_depend>
  <run_depend>roch_robot</run_depend> 
  <run_depend>roch_simulator</run_depend> 
  <run_depend>roch_viz</run_depend> 

  <export>
    <metapackage/>
  </export>
</package>
